Large updates to the GUI

--- a/mdt/data/mdt.conf
+++ b/mdt/data/mdt.conf
@@ -33,6 +33,12 @@ optimization_settings:
             run_in_batches: True
             single_batch_length: !!float 2.0e6
 
+        # the indices of the devices we want to use for the computations.
+        # This works in combination with the load balancers.
+        # For the indices please run the script mdt-list-devices.
+        # An empty list indicates that we want to use all devices.
+        cl_devices: []
+
     # Optimizations settings for single models. This can overwrite any value from general_optimization_settings.
     # This uses regex expressions for matching the model_name and the settings are accumulative
     # (therefore order matters).
@@ -105,22 +111,25 @@ logging:
                 stream: ext://sys.stdout
 
             model_output_file:
-                class: mdt.utils.ModelOutputLogHandler
+                class: mdt.log_handlers.ModelOutputLogHandler
                 level: INFO
                 formatter: simple
                 encoding: utf8
+
+            dispatch_handler:
+                class: mdt.log_handlers.LogDispatchHandler
+                level: INFO
+                formatter: simple
 
         loggers:
             mot:
                 level: INFO
                 handlers: [console, model_output_file]
-                propagate: no
 
             mdt:
                 level: INFO
                 handlers: [console, model_output_file]
-                propagate: no
 
         root:
             level: INFO
-            handlers: [console]
+            handlers: [dispatch_handler]
