Large updates to the batch fitting: - Moved batch utils to a separate module; - we changed the point of instantation of batch profiles; - created structure classes for output; - and started with moving the protocol and mask generation to the batch profiles.
Also, output maps may now contain maps without a period in the name (like: NDI instead of NDI.ndi).

--- a/mdt/data/mdt.conf
+++ b/mdt/data/mdt.conf
@@ -1,7 +1,7 @@
 components_location: ~/.mdt/components
 
 optimization_settings:
-    # Please see the documentation of PPPE.meta_optimizer for more information about the options
+    # Please see the documentation of MOT.meta_optimizer for more information about the options
     general:
         # the optimizers to use. List at least one, can be more for use with extra_optim_runs > 0.
         optimizers:
