Fixed model output logging bug. Updates to the batch profiles. Added a ProtocolLoader class that should be given to the SubjectInfo class while loading subjects in the batch profiles.

--- a/mdt/data/mdt.conf
+++ b/mdt/data/mdt.conf
@@ -73,14 +73,13 @@ optimization_settings:
 
 # special options for the batch fitting routine
 batch_fitting:
-    subjects: !!null ''
     models:
         -   'BallStick (Cascade)'
         -   'Tensor (Cascade)'
         -   'Noddi (Cascade)'
         -   'Charmed (Cascade)'
 
-    # Protocol options per model, uses regex for matching. The configuration is accumulative.
+    # Protocol options per model, uses regex for matching. The configuration can accumulate.
     model_protocol_options:
         -   model_name: '^Tensor$'
             config:
