Improved the logging in the batch fitting routines.

--- a/mdt/data/mdt.conf
+++ b/mdt/data/mdt.conf
@@ -77,11 +77,13 @@ batch_fitting:
         -   'BallStick (Cascade)'
         -   'Tensor (Cascade)'
         -   'Noddi (Cascade)'
+        -   'BallStickStickStick (Cascade)'
         -   'Charmed (Cascade)'
 
     # Protocol options per model, uses regex for matching. The configuration can accumulate.
     model_protocol_options:
         -   model_name: '^Tensor$'
+            enabled: True
             config:
                 use_weighted: True
                 use_unweighted: True
