--- a/mdt/data/mdt.conf
+++ b/mdt/data/mdt.conf
@@ -4,6 +4,7 @@ optimization_settings:
     # Please see the documentation of MOT.meta_optimizer for more information about the options
     general:
         # the optimizers to use. List at least one, can be more for use with extra_optim_runs > 0.
+        # You can set the patience to null. Then the default patience for the optimizer is used.
         optimizers:
             -   name: 'Powell'
                 patience: 2
@@ -110,7 +111,7 @@ logging:
 
             model_output_file:
                 class: mdt.log_handlers.ModelOutputLogHandler
-                level: INFO
+                level: DEBUG
                 formatter: simple
                 encoding: utf8
 
