Fixed the shared state bug with the model functions

--- a/mdt/data/mdt.conf
+++ b/mdt/data/mdt.conf
@@ -63,11 +63,6 @@ optimization_settings:
                 load_balancer:
                     single_batch_length: !!float 5.0e5
 
-        -   model_name: '^(.*)-ExVivo'
-            config:
-                optimizers:
-                    -   name: 'Powell'
-                        patience: 5
 
 # special options for the batch fitting routine
 batch_fitting:
@@ -85,6 +80,8 @@ batch_fitting:
             config:
                 use_weighted: True
                 use_unweighted: True
+                # the unweighted threshold in SI units of s/m^2
+                unweighted_threshold: !!float 25e6
                 # Indicate to use b-values between [start - epsilon, end + epsilon], set b-values in s/m^2
                 b_value:
                     start: 0
