Updates to the visualizer

--- a/mdt/data/mdt.conf
+++ b/mdt/data/mdt.conf
@@ -42,6 +42,12 @@ optimization_settings:
     # (therefore order matters).
     # Please note that optimization configuration hints in the cascades models takes precedence over these values.
     single_model:
+        -   model_name: '^Noddi$'
+            config:
+                optimizers:
+                    -   name: 'NMSimplex'
+                        patience: 10
+
         -   model_name: '^Charmed(_[1-2]r)?'
             config:
                 optimizers:
