--- a/mdt/data/mdt.conf
+++ b/mdt/data/mdt.conf
@@ -69,7 +69,7 @@ batch_fitting:
         -   'Tensor (Cascade)'
         -   'Noddi (Cascade)'
         -   'BallStickStickStick (Cascade)'
-        -   'Charmed (Cascade)'
+        -   'Charmed (Cascade|fixed)'
 
     # Protocol options per model, uses regex for matching. The configuration can accumulate.
     model_protocol_options:
