Adds Noddi2, some updates to the configuration, Powell is now the general default

--- a/mdt/data/mdt.conf
+++ b/mdt/data/mdt.conf
@@ -39,20 +39,7 @@ optimization_settings:
     # This uses regex expressions for matching the model_name and the settings are accumulative
     # (therefore order matters).
     # Please note that optimization configuration hints in the cascades models takes precedence over these values.
-    single_model:
-        -   model_name: '^Noddi$'
-            config:
-                optimizers:
-                    -   name: 'NMSimplex'
-                        patience: 10
-
-        -   model_name: '^Charmed(_[1-2]r)?'
-            config:
-                optimizers:
-                    -   name: 'NMSimplex'
-                        patience: 30
-                load_balancer:
-                    single_batch_length: !!float 1.5e5
+    single_model: []
 
 
 # special options for the batch fitting routine
