Adds a noise calculator using the unweighted volumes. In model fitting option for auto calculating the noise std.

--- a/mdt/data/mdt.conf
+++ b/mdt/data/mdt.conf
@@ -36,10 +36,19 @@ optimization_settings:
         cl_devices: []
 
     # Optimizations settings for single models. This can overwrite any value from general_optimization_settings.
-    # This uses regex expressions for matching the model_name and the settings are accumulative
-    # (therefore order matters).
-    # Please note that optimization configuration hints in the cascades models takes precedence over these values.
-    single_model: []
+    # This uses regex expressions for matching the model_name and the settings are accumulative and order matters.
+    # Note 1) the optimization configuration hints in the cascades models takes precedence over these values.
+    # Note 2) if you specify an optimizer in the fit_model function
+    single_model:
+        -   model_name: '^Noddi$'
+            config:
+                load_balancer:
+                    single_batch_length: !!float 2e5
+
+        -   model_name: '^Charmed(_[1-2]r)?'
+            config:
+                load_balancer:
+                    single_batch_length: !!float 2e5
 
 
 # special options for the batch fitting routine
