Updates to the protocol, updates to the batch fit profiles. The batch profiles now have more responsibilities.

--- a/mdt/data/mdt.conf
+++ b/mdt/data/mdt.conf
@@ -53,14 +53,7 @@ optimization_settings:
 
 # special options for the batch fitting routine
 batch_fitting:
-    models:
-        -   'BallStick (Cascade)'
-        -   'Tensor (Cascade)'
-        -   'Noddi (Cascade)'
-        -   'BallStickStickStick (Cascade)'
-        -   'Charmed (Cascade|fixed)'
-
-    # Protocol options per model, uses regex for matching. The configuration can accumulate.
+    # Protocol options per model, uses regex for matching. The configuration may accumulate.
     model_protocol_options:
         -   model_name: '^Tensor$'
             enabled: True
