Beautified the cascade models, noise std calculators to user home folder

--- a/mdt/data/mdt.conf
+++ b/mdt/data/mdt.conf
@@ -40,33 +40,15 @@ optimization_settings:
     # Note 1) the optimization configuration hints in the cascades models takes precedence over these values.
     # Note 2) if you specify an optimizer in the fit_model function
     single_model:
-        -   model_name: '^Noddi$'
+        -   model_name: '^Noddi'
             config:
                 load_balancer:
-                    single_batch_length: !!float 2e5
+                    single_batch_length: !!float 1e5
 
         -   model_name: '^Charmed(_[1-2]r)?'
             config:
                 load_balancer:
-                    single_batch_length: !!float 2e5
-
-
-# special options for the batch fitting routine
-batch_fitting:
-    # Protocol options per model, uses regex for matching. The configuration may accumulate.
-    model_protocol_options:
-        -   model_name: '^Tensor$'
-            enabled: True
-            config:
-                use_weighted: True
-                use_unweighted: True
-                # the unweighted threshold in SI units of s/m^2
-                unweighted_threshold: !!float 25e6
-                # Indicate to use b-values between [start - epsilon, end + epsilon], set b-values in s/m^2
-                b_value:
-                    start: 0
-                    end: !!float 1.5e9
-                    epsilon: !!float 1e-5
+                    single_batch_length: !!float 3e5
 
 logging:
     info_dict:
