Fixed model_float issue in NeumannCyl function

--- a/mdt/data/mdt.conf
+++ b/mdt/data/mdt.conf
@@ -43,12 +43,13 @@ optimization_settings:
         -   model_name: '^Noddi'
             config:
                 load_balancer:
-                    single_batch_length: !!float 3.0e5
+                    run_in_batches: False
+                    single_batch_length: !!float 1e5
 
         -   model_name: '^Charmed(_[1-2]r)?'
             config:
                 load_balancer:
-                    single_batch_length: !!float 3e5
+                    single_batch_length: !!float 5e5
 
 logging:
     info_dict:
