--- a/mdt/data/mdt.conf
+++ b/mdt/data/mdt.conf
@@ -38,18 +38,17 @@ optimization_settings:
     # Optimizations settings for single models. This can overwrite any value from general_optimization_settings.
     # This uses regex expressions for matching the model_name and the settings are accumulative and order matters.
     # Note 1) the optimization configuration hints in the cascades models takes precedence over these values.
-    # Note 2) if you specify an optimizer in the fit_model function
+    # Note 2) if you specify an optimizer in the fit_model function these settings are overwritten
     single_model:
         -   model_name: '^Noddi'
             config:
                 load_balancer:
-                    run_in_batches: False
                     single_batch_length: !!float 1e5
 
         -   model_name: '^Charmed(_[1-2]r)?'
             config:
                 load_balancer:
-                    single_batch_length: !!float 5e5
+                    single_batch_length: !!float 2e5
 
 logging:
     info_dict:
