The fitting strategies are now selectable in the config file

--- a/mdt/data/mdt.conf
+++ b/mdt/data/mdt.conf
@@ -39,16 +39,30 @@ optimization_settings:
     # This uses regex expressions for matching the model_name and the settings are accumulative and order matters.
     # Note 1) the optimization configuration hints in the cascades models takes precedence over these values.
     # Note 2) if you specify an optimizer in the fit_model function these settings are overwritten
+    single_model: []
+
+
+# The strategies to during model fitting.
+fitting_strategies:
+    general:
+        name: AllSlicesAtOnce
+
+    # Optimizations settings for single models. This can overwrite any value from general_optimization_settings.
+    # This uses regex expressions for matching the model_name and the settings are accumulative and order matters.
     single_model:
         -   model_name: '^Noddi'
             config:
-                load_balancer:
-                    single_batch_length: !!float 1e5
+                name: SliceBySlice
+                options:
+                    slice_dimension: 2
+                    slice_width: 2
 
         -   model_name: '^Charmed(_[1-2]r)?'
             config:
-                load_balancer:
-                    single_batch_length: !!float 1e4
+                name: SliceBySlice
+                options:
+                    slice_dimension: 2
+                    slice_width: 2
 
 logging:
     info_dict:
