Updates to the model fitting config

--- a/mdt/data/mdt.conf
+++ b/mdt/data/mdt.conf
@@ -49,20 +49,24 @@ fitting_strategies:
 
     # Optimizations settings for single models. This can overwrite any value from general_optimization_settings.
     # This uses regex expressions for matching the model_name and the settings are accumulative and order matters.
-    single_model:
-        -   model_name: '^Noddi'
-            config:
+    # You can specify a model within a cascade by formatting a sort of tree structure with the cascade on top
+    # and the final single model on the bottom of the tree.
+    model_specific:
+        - '^BallStick (Cascade)':
+            - '^BallStick':
                 name: SliceBySlice
-                options:
-                    slice_dimension: 2
-                    slice_width: 5
 
-        -   model_name: '^Charmed(_[1-2]r)?'
-            config:
-                name: SliceBySlice
-                options:
-                    slice_dimension: 2
-                    slice_width: 5
+        - '^Noddi':
+            name: SliceBySlice
+            options:
+                slice_dimension: 2
+                slice_width: 5
+
+        - '^Charmed(_[1-2]r)?':
+            name: SliceBySlice
+            options:
+                slice_dimension: 2
+                slice_width: 5
 
 logging:
     info_dict:
