Adds the new method of specifying config options for models

--- a/mdt/data/mdt.conf
+++ b/mdt/data/mdt.conf
@@ -38,8 +38,9 @@ optimization_settings:
     # Optimizations settings for single models. This can overwrite any value from general_optimization_settings.
     # This uses regex expressions for matching the model_name and the settings are accumulative and order matters.
     # Note 1) the optimization configuration hints in the cascades models takes precedence over these values.
-    # Note 2) if you specify an optimizer in the fit_model function these settings are overwritten
-    single_model: []
+    # Note 2) if you specify an optimizer in the fit_model function these settings are overwritten.
+    # See for additional information the info at fitting_strategies -> model_specific
+    model_specific: []
 
 
 # The strategies to during model fitting.
@@ -47,15 +48,20 @@ fitting_strategies:
     general:
         name: AllSlicesAtOnce
 
-    # Optimizations settings for single models. This can overwrite any value from general_optimization_settings.
-    # This uses regex expressions for matching the model_name and the settings are accumulative and order matters.
+    # Optimizations settings specific for models. This can overwrite any value from general_optimization_settings,
+    # and uses regex expressions for matching the model by name. The settings are accumulative and order matters.
     # You can specify a model within a cascade by formatting a sort of tree structure with the cascade on top
     # and the final single model on the bottom of the tree.
+    #
+    # If you don't specify a cascade the model will still be matched.
+    #
+    # Example for Noddi in a cascade:
+    #
+    # - '^Noddi \(Cascade\)$':
+    #        - '^Noddi':
+    #            name: SliceBySlice
+    #
     model_specific:
-        - '^BallStick (Cascade)':
-            - '^BallStick':
-                name: SliceBySlice
-
         - '^Noddi':
             name: SliceBySlice
             options:
