--- a/mdt/data/mdt.conf
+++ b/mdt/data/mdt.conf
@@ -41,6 +41,11 @@ optimization_settings:
     # Note 2) if you specify an optimizer in the fit_model function these settings are overwritten.
     # See for additional information the info at fitting_strategies -> model_specific
     model_specific: []
+    #    - '^Noddi \(Cascade\)$':
+    #        - '^Noddi':
+    #            optimizers:
+    #                -   name: 'NMSimplex'
+    #                    patience: 30
 
 
 # The strategies to during model fitting.
@@ -66,7 +71,7 @@ fitting_strategies:
             name: SliceBySlice
             options:
                 slice_dimension: 2
-                slice_width: 10
+                slice_width: 15
 
         - '^Charmed(_[1-2]r)?':
             name: SliceBySlice
