Little fixes here and there. Made the Charmed cylinder compartment model double again for more accurate fitting.

--- a/mdt/data/mdt.conf
+++ b/mdt/data/mdt.conf
@@ -41,12 +41,6 @@ optimization_settings:
     # Note 2) if you specify an optimizer in the fit_model function these settings are overwritten.
     # See for additional information the info at fitting_strategies -> model_specific
     model_specific: []
-    #    - '^Noddi \(Cascade\)$':
-    #        - '^Noddi':
-    #            optimizers:
-    #                -   name: 'NMSimplex'
-    #                    patience: 30
-
 
 # The strategies to during model fitting.
 fitting_strategies:
@@ -62,7 +56,7 @@ fitting_strategies:
     #
     # Example for Noddi in a cascade:
     #
-    # - '^Noddi \(Cascade\)$':
+    # - '^Noddi \(Cascade[|a-zA-Z0-9_]*\)$':
     #        - '^Noddi':
     #            name: SliceBySlice
     #
@@ -77,7 +71,7 @@ fitting_strategies:
             name: SliceBySlice
             options:
                 slice_dimension: 2
-                slice_width: 10
+                slice_width: 15
 
 logging:
     info_dict:
