Updates to the configuration of the noise std calculators

--- a/mdt/data/mdt.conf
+++ b/mdt/data/mdt.conf
@@ -42,6 +42,14 @@ optimization_settings:
     # See for additional information the info at fitting_strategies -> model_specific
     model_specific: []
 
+noise_std_estimating:
+    # options for estimating the noise std before model fitting and or sampling
+    general:
+        estimators:
+            -   AverageOfAirROI
+            -   AverageOfUnweightedVolumes
+
+
 # The strategies to during model fitting.
 fitting_strategies:
     general:
