Fixed small path bug in GUI, renamed the FittingStrategies to ModelProcessingStrategies and moved the fittin gpart out of it. The fitting is now injected as a dependency, this opens the way to using sampling with the processing strategies as well.

--- a/mdt/data/mdt.conf
+++ b/mdt/data/mdt.conf
@@ -39,7 +39,7 @@ optimization_settings:
     # This uses regex expressions for matching the model_name and the settings are accumulative and order matters.
     # Note 1) the optimization configuration hints in the cascades models takes precedence over these values.
     # Note 2) if you specify an optimizer in the fit_model function these settings are overwritten.
-    # See for additional information the info at fitting_strategies -> model_specific
+    # See for additional information the info at processing_strategies -> model_specific
     model_specific: []
 
 noise_std_estimating:
@@ -51,9 +51,9 @@ noise_std_estimating:
 
 
 # The strategies to during model fitting.
-fitting_strategies:
+processing_strategies:
     general:
-        name: AllSlicesAtOnce
+        name: AllVoxelsAtOnce
 
     # Optimizations settings specific for models. This can overwrite any value from general_optimization_settings,
     # and uses regex expressions for matching the model by name. The settings are accumulative and order matters.
@@ -70,16 +70,14 @@ fitting_strategies:
     #
     model_specific:
         - '^Noddi':
-            name: SliceBySlice
+            name: VoxelRange
             options:
-                slice_dimension: 2
-                slice_width: 15
+                nmr_voxels: 40000
 
         - '^Charmed(_[1-2]r)?':
-            name: SliceBySlice
+            name: VoxelRange
             options:
-                slice_dimension: 2
-                slice_width: 10
+                nmr_voxels: 40000
 
 logging:
     info_dict:
