Changes to the config to allow for different processing strategies for fitting and for sampling

--- a/mdt/data/mdt.conf
+++ b/mdt/data/mdt.conf
@@ -42,42 +42,44 @@ optimization_settings:
     # See for additional information the info at processing_strategies -> model_specific
     model_specific: []
 
+# options for estimating the noise std before model fitting and or sampling
 noise_std_estimating:
-    # options for estimating the noise std before model fitting and or sampling
     general:
+        # the optimization routine will use the given estimators in the given order
         estimators:
             -   AverageOfAirROI
             -   AverageOfUnweightedVolumes
 
 
-# The strategies to during model fitting.
+# The strategies to for processing the models
 processing_strategies:
-    general:
-        name: AllVoxelsAtOnce
+    optimization:
+        general:
+            name: AllVoxelsAtOnce
 
-    # Optimizations settings specific for models. This can overwrite any value from general_optimization_settings,
-    # and uses regex expressions for matching the model by name. The settings are accumulative and order matters.
-    # You can specify a model within a cascade by formatting a sort of tree structure with the cascade on top
-    # and the final single model on the bottom of the tree.
-    #
-    # If you don't specify a cascade the model will still be matched.
-    #
-    # Example for Noddi in a cascade:
-    #
-    # - '^Noddi \(Cascade[|a-zA-Z0-9_]*\)$':
-    #        - '^Noddi':
-    #            name: SliceBySlice
-    #
-    model_specific:
-        - '^Noddi':
-            name: VoxelRange
-            options:
-                nmr_voxels: 40000
+        # Optimizations settings specific for models. This can overwrite any value from general_optimization_settings,
+        # and uses regex expressions for matching the model by name. The settings are accumulative and order matters.
+        # You can specify a model within a cascade by formatting a sort of tree structure with the cascade on top
+        # and the final single model on the bottom of the tree.
+        #
+        # If you don't specify a cascade the model will still be matched.
+        #
+        # Example for Noddi in a cascade:
+        #
+        # - '^Noddi \(Cascade[|a-zA-Z0-9_]*\)$':
+        #        - '^Noddi':
+        #            name: SliceBySlice
+        #
+        model_specific:
+            - '^Noddi':
+                name: VoxelRange
+                options:
+                    nmr_voxels: 40000
 
-        - '^Charmed(_[1-2]r)?':
-            name: VoxelRange
-            options:
-                nmr_voxels: 40000
+            - '^Charmed(_[1-2]r)?':
+                name: VoxelRange
+                options:
+                    nmr_voxels: 40000
 
 logging:
     info_dict:
