Small fixes to the visualization font size and adds vector ranking feature to the rawmap tvl output

--- a/mdt/data/mdt.conf
+++ b/mdt/data/mdt.conf
@@ -81,6 +81,11 @@ processing_strategies:
                 options:
                     nmr_voxels: 40000
 
+    sampling:
+        general:
+            name: AllVoxelsAtOnce
+
+
 logging:
     info_dict:
         version: 1
