Some changes to the comments, small updates to the Tensor compartment model. The specific Tensor model transformations are now put in the Tensor model instead of the Tensor compartment model

--- a/mdt/data/mdt.conf
+++ b/mdt/data/mdt.conf
@@ -83,7 +83,9 @@ processing_strategies:
 
     sampling:
         general:
-            name: AllVoxelsAtOnce
+            name: VoxelRange
+            options:
+                nmr_voxels: 10000
 
 
 logging:
