Adds a wrapper around stdout.

--- a/mdt/data/mdt.conf
+++ b/mdt/data/mdt.conf
@@ -98,10 +98,9 @@ logging:
 
         handlers:
             console:
-                class: logging.StreamHandler
-                level: DEBUG
+                class: mdt.log_handlers.StdOutHandler
+                level: INFO
                 formatter: simple
-                stream: ext://sys.stdout
 
             model_output_file:
                 class: mdt.log_handlers.ModelOutputLogHandler
@@ -116,11 +115,11 @@ logging:
 
         loggers:
             mot:
-                level: INFO
+                level: DEBUG
                 handlers: [console, model_output_file]
 
             mdt:
-                level: INFO
+                level: DEBUG
                 handlers: [console, model_output_file]
 
         root:
