Adds protocol dependent processing strategy

--- a/mdt/data/mdt.conf
+++ b/mdt/data/mdt.conf
@@ -81,6 +81,11 @@ processing_strategies:
                 options:
                     nmr_voxels: 20000
 
+            - '^BallStickStickStick?':
+                name: ProtocolDependent
+                options:
+                    steps: [[0, 0], [100, 50000], [200, 30000]]
+
     sampling:
         general:
             name: VoxelRange
