Made the load balancer accept a list of wait events.

--- a/mdt/data/mdt.conf
+++ b/mdt/data/mdt.conf
@@ -51,6 +51,15 @@ noise_std_estimating:
             -   AverageOfUnweightedVolumes
 
 
+# model protocol options for all model fitting and sampling
+model_protocol_options:
+    - '^S0$':
+        # the unweighted threshold in SI units of s/m^2
+        unweighted_threshold: !!float 25e6
+        use_weighted: False
+        use_unweighted: True
+
+
 # The strategies to for processing the models
 processing_strategies:
     optimization:
