Updates to the processing strategies in the config

--- a/mdt/data/mdt.conf
+++ b/mdt/data/mdt.conf
@@ -55,7 +55,9 @@ noise_std_estimating:
 processing_strategies:
     optimization:
         general:
-            name: AllVoxelsAtOnce
+            name: ProtocolDependent
+            options:
+                steps: [[0, 0], [100, 500000], [200, 100000]]
 
         # Optimizations settings specific for models. This can overwrite any value from general_optimization_settings,
         # and uses regex expressions for matching the model by name. The settings are accumulative and order matters.
@@ -74,12 +76,17 @@ processing_strategies:
             - '^Noddi':
                 name: VoxelRange
                 options:
-                    nmr_voxels: 20000
+                    nmr_voxels: 30000
 
             - '^Charmed(_[1-2]r)?':
-                name: VoxelRange
+                name: ProtocolDependent
                 options:
-                    nmr_voxels: 10000
+                    steps: [[0, 0], [100, 50000], [200, 30000]]
+
+            - '^Charmed?':
+                name: ProtocolDependent
+                options:
+                    steps: [[0, 0], [100, 50000], [200, 10000]]
 
             - '^BallStickStickStick?':
                 name: ProtocolDependent
