Changed the structure of the model specific configuration options to a dict structure

--- a/mdt/data/mdt.conf
+++ b/mdt/data/mdt.conf
@@ -36,11 +36,13 @@ optimization_settings:
         cl_devices: []
 
     # Optimizations settings for single models. This can overwrite any value from general_optimization_settings.
-    # This uses regex expressions for matching the model_name and the settings are accumulative and order matters.
+    # This uses regex expressions for matching the model_name. As keys for the items you can either provide
+    # a string with a single regex, or you can provide a !!python/tuple [...] with multiple keys that is
+    # partially matched if needed.
+    #
     # Note 1) the optimization configuration hints in the cascades models takes precedence over these values.
     # Note 2) if you specify an optimizer in the fit_model function these settings are overwritten.
-    # See for additional information the info at processing_strategies -> model_specific
-    model_specific: []
+    model_specific: {}
 
 # options for estimating the noise std before model fitting and or sampling
 noise_std_estimating:
@@ -52,12 +54,26 @@ noise_std_estimating:
 
 
 # model protocol options for all model fitting and sampling
+# same matching style as in the processing_strategies -> model_specific.
 model_protocol_options:
-    - '^S0$':
+    '^S0$':
         # the unweighted threshold in SI units of s/m^2
         unweighted_threshold: !!float 25e6
         use_weighted: False
         use_unweighted: True
+
+    '^Tensor$':
+        use_weighted: True
+        use_unweighted: True
+
+        # the unweighted threshold in SI units of s/m^2
+        unweighted_threshold: !!float 25e6
+
+        # Indicate to use b-values between [start - epsilon, end + epsilon], set b-values in s/m^2
+        b_value:
+            start: 0
+            # 1.5e9 + eps
+            end: !!float 1.6e9
 
 
 # The strategies to for processing the models
@@ -66,38 +82,38 @@ processing_strategies:
         general:
             name: ProtocolDependent
             options:
-                steps: [[0, 0], [100, 500000], [200, 100000]]
+                steps: [[0, 0], [100, 500000], [200, 300000]]
 
-        # Optimizations settings specific for models. This can overwrite any value from general_optimization_settings,
-        # and uses regex expressions for matching the model by name. The settings are accumulative and order matters.
-        # You can specify a model within a cascade by formatting a sort of tree structure with the cascade on top
-        # and the final single model on the bottom of the tree.
-        #
-        # If you don't specify a cascade the model will still be matched.
+        # The processing strategies for specific models. This overrides the general processing strategy.
+        # This uses regex expressions for matching the model_name. As keys for the items you can either provide
+        # a string with a single regex, or you can provide a !!python/tuple [...] with multiple keys that is
+        # partially matched if needed.
         #
         # Example for Noddi in a cascade:
         #
-        # - '^Noddi \(Cascade[|a-zA-Z0-9_]*\)$':
-        #        - '^Noddi':
-        #            name: SliceBySlice
+        # !!python/tuple ['^Noddi \(Cascade[|a-zA-Z0-9_]*\)$', '^Noddi']:
+        #      name: SliceBySlice
         #
         model_specific:
-            - '^Noddi':
+            '^S0$':
+                name: AllVoxelsAtOnce
+
+            '^Noddi$':
                 name: VoxelRange
                 options:
                     nmr_voxels: 30000
 
-            - '^Charmed(_[1-2]r)?':
+            '^Charmed_r[1-2]$':
                 name: ProtocolDependent
                 options:
                     steps: [[0, 0], [100, 50000], [200, 30000]]
 
-            - '^Charmed?':
+            '^Charmed$':
                 name: ProtocolDependent
                 options:
                     steps: [[0, 0], [100, 50000], [200, 10000]]
 
-            - '^BallStickStickStick?':
+            '^BallStickStickStick$':
                 name: ProtocolDependent
                 options:
                     steps: [[0, 0], [100, 100000], [200, 50000]]
@@ -106,7 +122,9 @@ processing_strategies:
         general:
             name: VoxelRange
             options:
-                nmr_voxels: 10000
+                nmr_voxels: 100000
+
+        model_specific: {}
 
 
 logging:
