Filtered some more maps in the standard view output

--- a/mdt/data/mdt.conf
+++ b/mdt/data/mdt.conf
@@ -99,9 +99,9 @@ processing_strategies:
                 name: AllVoxelsAtOnce
 
             '^Noddi$':
-                name: VoxelRange
+                name: ProtocolDependent
                 options:
-                    nmr_voxels: 30000
+                    steps: [[0, 0], [100, 60000], [200, 50000]]
 
             '^Charmed_r[1-2]$':
                 name: ProtocolDependent
