Small updates to config

--- a/mdt/data/mdt.conf
+++ b/mdt/data/mdt.conf
@@ -27,7 +27,7 @@ optimization_settings:
         load_balancer:
             name: 'PreferGPU'
             run_in_batches: True
-            single_batch_length: !!float 2.0e6
+            single_batch_length: !!float 1.0e6
 
         # the indices of the devices we want to use for the computations.
         # This works in combination with the load balancers.
@@ -69,10 +69,10 @@ model_protocol_options:
         # the unweighted threshold in SI units of s/m^2
         unweighted_threshold: !!float 25e6
 
-        # Indicate to use b-values between [start - epsilon, end + epsilon], set b-values in s/m^2
+        # Indicate to use b-values between [start, end], set b-values in s/m^2
         b_value:
             start: 0
-            # 1.5e9 + eps
+            # for end we use 1.5e9 + eps
             end: !!float 1.6e9
 
 
@@ -116,7 +116,7 @@ processing_strategies:
             '^BallStickStickStick$':
                 name: ProtocolDependent
                 options:
-                    steps: [[0, 0], [100, 200000], [200, 100000]]
+                    steps: [[0, 0], [100, 100000], [200, 50000]]
 
     sampling:
         general:
