Updates to the noise std estimators.

--- a/mdt/data/mdt.conf
+++ b/mdt/data/mdt.conf
@@ -50,7 +50,9 @@ noise_std_estimating:
         # the optimization routine will use the given estimators in the given order
         estimators:
             -   AverageOfAirROI
-            -   AverageOfUnweightedVolumes
+            -   AllUnweightedVolumes
+            -   TwoUnweightedVolumes
+            -   SubtractEstimatedS0
 
 
 # model protocol options for all model fitting and sampling
