* Frank: Relaxometry GRE incorporated.

--- a/mdt/data/mdt.conf
+++ b/mdt/data/mdt.conf
@@ -98,6 +98,11 @@ processing_strategies:
             '^S0$':
                 name: AllVoxelsAtOnce
 
+            '^\w+\-ExVivo$':
+                name: VoxelRange
+                options:
+                    nmr_voxels: 1000000
+
             '^Noddi$':
                 name: ProtocolDependent
                 options:
