Adds the noise std parameter to the model fit script. Adds the batch fit script. Updates to the noise std estimators.

--- a/mdt/data/mdt.conf
+++ b/mdt/data/mdt.conf
@@ -51,6 +51,7 @@ noise_std_estimating:
         estimators:
             -   AllUnweightedVolumes
             -   TwoUnweightedVolumes
+            -   AverageOfAir
 
 
 # model protocol options for all model fitting and sampling
