Updates to the noise estimators

--- a/mdt/data/mdt.conf
+++ b/mdt/data/mdt.conf
@@ -51,7 +51,8 @@ noise_std_estimating:
         estimators:
             -   AllUnweightedVolumes
             -   TwoUnweightedVolumes
-            -   AverageOfAir
+            -   AverageOfAir_ExtendedMask
+            -   AverageOfAir_DilatedMask
 
 
 # model protocol options for all model fitting and sampling
