Small change in the config, small update in BatchFitting

--- a/mdt/data/mdt.conf
+++ b/mdt/data/mdt.conf
@@ -106,11 +106,17 @@ processing_strategies:
                     nmr_voxels: 1000000
 
             '^Noddi$':
+                #name: VoxelRange
+                #options:
+                #    nmr_voxels: 10000
                 name: ProtocolDependent
                 options:
                     steps: [[0, 0], [100, 150000], [200, 50000]]
 
             '^Charmed_r[1-2]$':
+                #name: VoxelRange
+                #options:
+                #    nmr_voxels: 10000
                 name: ProtocolDependent
                 options:
                     steps: [[0, 0], [100, 150000], [200, 50000]]
