More work on the QT single model fit GUI. The view results tab now works

--- a/mdt/data/qt_designs/Makefile
+++ b/mdt/data/qt_designs/Makefile
@@ -7,18 +7,20 @@ QT_RESOURCE_DIR = ./
 QT_COMPILED_DIR = ../../gui/qt/design
  
 # UI files to compile
-QT_UI_FILES = gui_single.ui
+QT_UI_FILES = gui_single.ui generate_protocol_tab.ui view_results_tab.ui
 
 # Qt resource files to compile
 QT_RESOURCES = gui_single.qrc
  
 # the binaries
-PYUIC = pyuic5
+PYUIC = pyuic5 --from-imports
 PYRCC = pyrcc5
 
  
 #################################
 # DO NOT EDIT FOLLOWING
+
+all : clean resources ui  
 
 help:
 	@echo "clean - remove all build designer files"
@@ -27,9 +29,7 @@ help:
 	@echo "all - build both the UI and the resources"
 
 QT_COMPILED_UI = $(QT_UI_FILES:%.ui=$(QT_COMPILED_DIR)/ui_%.py)
-QT_COMPILED_RESOURCES = $(QT_RESOURCES:%.qrc=$(QT_COMPILED_DIR)/rc_%.py)
- 
-all : clean resources ui  
+QT_COMPILED_RESOURCES = $(QT_RESOURCES:%.qrc=$(QT_COMPILED_DIR)/%_rc.py)
 
 resources : $(QT_COMPILED_RESOURCES) 
 
@@ -42,4 +42,4 @@ $(QT_COMPILED_DIR)/%_rc.py : $(QT_RESOURCE_DIR)/%.qrc
 	$(PYRCC) $< -o $@
  
 clean : 	
-	$(RM) $(QT_COMPILED_UI) $(QT_COMPILED_RESOURCES) $(QT_COMPILED_UI:.py=.pyc) $(QT_COMPILED_RESOURCES:.py=.pyc)  
+	$(RM) -f $(QT_COMPILED_DIR)/ui_*.py $(QT_COMPILED_DIR)/*_rc.py
