Updates to the processing strategies

--- a/mdt/data/mdt.conf
+++ b/mdt/data/mdt.conf
@@ -70,9 +70,16 @@ model_protocol_options:
 processing_strategies:
     optimization:
         general:
-            name: ProtocolDependent
+            #name: ProtocolDependent
+            #options:
+            #    steps: [[0, 0], [100, 300000], [200, 200000]]
+
+            #name: VoxelRange
+            #options:
+            #    nmr_voxels: 81582
+            name: SliceBySlice
             options:
-                steps: [[0, 0], [100, 300000], [200, 200000]]
+                slice_width: 10
 
         # The processing strategies for specific models. This overrides the general processing strategy.
         # This uses regex expressions for matching the model_name. As keys for the items you can either provide
