--- a/mdt/data/mdt.conf
+++ b/mdt/data/mdt.conf
@@ -1,3 +1,11 @@
+# Specifics for the output format of optimization and sampling
+# the options gzip determine if the volumes are written as .nii or as .nii.gz
+output_format:
+    optimization:
+        gzip: True
+    sampling:
+        gzip: True
+
 optimization_settings:
     # Please see the documentation of MOT.meta_optimizer for more information about the options
     general:
