Adds deferred ROI creation classes to defer loading of the ROI till needed. This saves memory and time

--- a/mdt/data/mdt.conf
+++ b/mdt/data/mdt.conf
@@ -2,9 +2,9 @@
 # the options gzip determine if the volumes are written as .nii or as .nii.gz
 output_format:
     optimization:
-        gzip: True
+        gzip: False
     sampling:
-        gzip: True
+        gzip: False
 
 optimization_settings:
     # Please see the documentation of MOT.meta_optimizer for more information about the options
